--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "react-native-screens": "^2.9.0",
         "react-redux": "^7.2.0",
         "redux": "^4.0.5",
-        "redux-persist": "^6.0.0"
+        "redux-persist": "^6.0.0",
+        "typesafe-actions": "^5.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.8.4",
@@ -32,7 +33,9 @@
         "@react-native-community/eslint-config": "^1.1.0",
         "@types/jest": "^25.2.3",
         "@types/react-native": "^0.63.1",
+        "@types/react-redux": "^7.1.9",
         "@types/react-test-renderer": "^16.9.2",
+        "@types/redux-saga": "^0.10.5",
         "@typescript-eslint/eslint-plugin": "^2.27.0",
         "@typescript-eslint/parser": "^2.27.0",
         "babel-jest": "^25.1.0",
