--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-native-reanimated": "^1.10.1",
         "react-native-safe-area-context": "^3.1.1",
         "react-native-screens": "^2.9.0",
+        "react-native-vector-icons": "^7.0.0",
         "react-redux": "^7.2.0",
         "redux": "^4.0.5",
         "redux-persist": "^6.0.0",
@@ -56,5 +57,11 @@
             "json",
             "node"
         ]
+    },
+    "rnpm": {
+        "assets": [
+            "./assets/fonts"
+        ]
     }
+
 }
